2017-06-19  Joakim Möller  <joakim.moller@molflow.com>
	* Mscripts_webapi/webread_retry.m: implemented a retry proxy function
	for webread to increase the chances of successful processing.
	* Build_scripts/runscript.m: using proxy function
	* Mscripts_webapi/get_logdata4freqmode.m: using proxy function
	* Mscripts_webapi/get_measuredfreqmodes4daterange.m: using proxy
	function
	* Mscripts_webapi/get_scan_aux_data.m: using proxy function
	* Mscripts_webapi/get_scan_l1b_data.m: using proxy function
	* Mscripts_webapi/get_scan_log_l1b_data.m: using proxy functiony

2017-06-19  Andreas Skyman  <andreas.skyman@molflow.com>

	* Build_scripts/docker/batch_build.sh: Updated comment, added fms 22 and 24
	* Build_scripts/docker/complete/Dockerfile: Updated FROM version

2017-06-07  Andreas Skyman  <andreas.skyman@molflow.com>

	* Build_scripts/docker/complete/Dockerfile: Updated FROM version

2017-06-02  Joakim Möller <joakim.moller@molflow.com>

	* Build_scripts/docker/runscript.m: Corrected exit status after L2
	delivery to odin-api. This might also speed up the processing a bit
	and reduce the load on the API.

2017-05-24  Andreas Skyman  <andreas.skyman@molflow.com>

	* Build_scripts/docker/complete/Dockerfile: Updated FROM version

2017-05-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m: lat_true and lon_true are now set to
	R.ATM.LAT and R.ATM.LON, to be consistent with extraction of a
	priori atmosphere. L2.Latitude/Longitude now set using nearest
	interpolation, instead pchip. Slightly poorer inside range covered
	by spectra, but works much better in extrapolation zone.

2017-05-03  Andreas Skyman  <andreas.skyman@molflow.com>

	* Build_scripts/batch_build.sh: Created batch building script

	* Build_scripts/docker/complete/Dockerfile: Updated FROM version

2017-05-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts_y.m: reshape of y with do_sensor failed.